# CollegeCAT

./: README.md  mypy.ini
backend/: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  authFlow.md  backend_routes_and_services.md  cleanup_database.py  docker-compose.yml  dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1be6ccdef703_added_database_model.py  2db862d2a458_added_databases.py  2f58479ef942_added_repr_method_to_classes.py  d8a7f93878ae_updated_relationship_constraints.py
backend/app/: config.py  main.py
backend/app/config/: config.py
backend/app/core/: exceptions.py  global_exception_handler.py  repository_base.py  response_formatter.py  service_base.py
backend/app/db/: postgres_client.py  radis_client.py
backend/app/middlewares/: auth_middleware.py  authmiddleware.py
backend/app/models/: model.py
backend/app/repositories/: lecturer_priority_repository.py  timetable_module_repository.py  timetable_repository.py  user_repository.py  workflow_repository.py  year_batch_repository.py
backend/app/repository/: user_repository.py
backend/app/routes/: authRoutes.py  auth_routes.py  subject_priority_routes.py  timetable_format_routes.py  timetable_module_routes.py  timetable_routes.py  userRoutes.py  (+3 more)
backend/docs/: README.md  migration_commands.md
backend/seeds/: README.md  cleanup_database.py  reset_sequences.py  run_all_seeds.py  seed_academic_years.py  seed_batches.py  seed_faculty_subject_priorities.py  seed_lecturer_subject_priorities.py  seed_subjects.py  seed_users.py  sequence_utils.py
(+109 files in other folders)
