[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "redis>=5.2.1",
    "scalar-fastapi>=1.0.3",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
